--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "crypto": "^1.0.1",
     "ecpair": "^2.1.0",
     "google-protobuf": "^3.21.2",
-    "secp256k1": "^5.0.0"
+    "secp256k1": "^5.0.0",
+    "web3": "^4.11.1"
   },
   "prettier": {
     "trailingComma": "all",
