fix: change package publishing config

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "license": "SEE LICENSE IN LICENSE",
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   },
   "workspaces": [
     "packages/*"
