--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -16,6 +16,7 @@
 		"build:prettier": "prettier --write 'dist/**/*.js'",
 		"docs": "typedoc --out docs",
 		"test": "jest --passWithNoTests",
+		"test:ci": "jest --passWithNoTests",
 		"lint": "eslint --ext .ts"
 	},
 	"homepage": "https://github.com/KiiChain/kiijs-sdk#readme",
