--- a/packages/proto/package.json
+++ b/packages/proto/package.json
@@ -27,7 +27,8 @@
     "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
     "build:dev": "npm run clean; npm run codegen; tsc --declarationMap; tsc -p tsconfig.esm.json; npm run copy",
     "lint": "eslint . --fix",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
+    "test:ci": "jest --passWithNoTests",
     "test:watch": "jest --watch"
   },
   "devDependencies": {
