--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,30 +20,33 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+          registry-url: 'https://registry.npmjs.org'
           
-      # Install Yarn (modern Berry version)
-      - name: Install Yarn
+      # Configure Yarn and NPM registry
+      - name: Configure registry
+        run: |
+          npm config set registry https://registry.npmjs.org/
+          yarn config set npmRegistryServer "https://registry.npmjs.org"
+          yarn config set npmAuthToken ${{ secrets.npm_token }}
+          yarn config set unsafeHttpWhitelist --json '["*.npmjs.org"]'
+          
+      # Install Yarn and dependencies
+      - name: Install dependencies
         run: |
           corepack enable
           yarn set version stable
-          yarn install --no-immutable
+          YARN_ENABLE_IMMUTABLE_INSTALLS=false yarn install
           
       # Build packages
       - name: Build packages
         run: yarn build
         
-      # Publish EVM package
-      - name: Publish EVM package
-        working-directory: ./packages/evm
-        run: yarn npm publish --access public
+      # Publish packages with proper auth
+      - name: Publish Packages
+        run: |
+          cd packages/evm && yarn npm publish --access public
+          cd ../proto && yarn npm publish --access public
         env:
           NPM_CONFIG_REGISTRY: 'https://registry.npmjs.org'
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
-          
-      # Publish Proto package
-      - name: Publish Proto package
-        working-directory: ./packages/proto
-        run: yarn npm publish --access public
-        env:
-          NPM_CONFIG_REGISTRY: 'https://registry.npmjs.org'
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+          YARN_NPM_AUTH_TOKEN: ${{ secrets.npm_token }}
