--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -39,7 +39,10 @@
 		"viem": "2.x"
 	},
 	"devDependencies": {
+		"@types/jest": "^29.5.14",
 		"ethers": "^6.0.0",
+		"jest": "^29.7.0",
+		"ts-jest": "^29.3.1",
 		"viem": "2.x"
 	}
 }
