--- a/packages/proto/package.json
+++ b/packages/proto/package.json
@@ -33,7 +33,10 @@
     "test:watch": "jest --watch"
   },
   "devDependencies": {
-    "@cosmology/telescope": "^1.10.0"
+    "@cosmology/telescope": "^1.10.0",
+		"@types/jest": "^29.5.14",
+		"jest": "^29.7.0",
+		"ts-jest": "^29.3.1"
   },
   "dependencies": {
     "@cosmjs/encoding": "0.32.3",
