--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,7 @@
 
     "baseUrl": "./",
     "paths": {
-      "@kiijs-sdk/evm/*": ["packages/evm/dist/esm/*", "packages/evm/dist/cjs/*"],
+      "kiijs-sdk/evm/*": ["packages/evm/dist/esm/*", "packages/evm/dist/cjs/*"],
     }
   },
   "exclude": [
