--- a/packages/proto/package.json
+++ b/packages/proto/package.json
@@ -36,7 +36,8 @@
     "@cosmology/telescope": "^1.10.0",
 		"@types/jest": "^29.5.14",
 		"jest": "^29.7.0",
-		"ts-jest": "^29.3.1"
+		"ts-jest": "^29.3.1",
+    "dotenv": "16.4.7"
   },
   "dependencies": {
     "@cosmjs/encoding": "0.32.3",
