--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,7 @@ jobs:
       # Run tests with coverage
       - name: Test ${{ matrix.package }}
         working-directory: ./packages/${{ matrix.package }}
-        run: yarn test:ci
         env:
           CI: true
+          TEST_MNEMONIC: ${{ secrets.TEST_MNEMONIC }}
+        run: yarn test:ci
