--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,4 +33,6 @@ jobs:
         env:
           CI: true
           TEST_MNEMONIC: ${{ secrets.TEST_MNEMONIC }}
+          TEST_PRIVATE_KEY: ${{ secrets.TEST_PRIVATE_KEY }}
+          TEST_HEX_ADDRESS: ${{ secrets.HEX_ADDRESS }}
         run: yarn test:ci
