--- a/packages/proto/package.json
+++ b/packages/proto/package.json
@@ -40,11 +40,11 @@
     "dotenv": "16.4.7"
   },
   "dependencies": {
-    "@cosmjs/encoding": "0.32.3",
-    "@cosmjs/math": "0.32.3",
-    "@cosmjs/amino": "0.32.3",
-    "@cosmjs/proto-signing": "0.32.3",
-    "@cosmjs/stargate": "0.32.3",
+    "@cosmjs/encoding": "^0.33.1",
+    "@cosmjs/math": "^0.33.1",
+    "@cosmjs/amino": "^0.33.1",
+    "@cosmjs/proto-signing": "^0.33.1",
+    "@cosmjs/stargate": "^0.33.1",
     "@cosmology/lcd": "^0.14.0"
   },
   "keywords": []
