--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        package: ['evm', 'proto']
+        package: ['evm', 'proto', 'utils']
     
     steps:
       - uses: actions/checkout@v4
