--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -28,7 +28,7 @@
 		"utils"
 	],
 	"repository": "git@github.com:KiiChain/kiijs-sdk.git",
-	"license": "MIT",
+	"license": "Apache-2.0",
 	"private": false,
 	"publishConfig": {
 		"access": "public",
