--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "kiijs-sdk",
   "version": "0.1.1",
@@ -35,13 +34,13 @@
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
     "copyfiles": "^2.4.1",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-unused-imports": "^4.0.0",
-    "eslint": "^8.56.0",
     "jest": "^29.6.2",
     "lerna": "^6",
-    "prettier": "^3.0.2",
+    "prettier": "3.6.2",
     "rimraf": "4.4.1",
     "strip-ansi": "^5",
     "symlink-workspace": "^1.1.0",
