chore: add tests to main package

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "clean": "lerna run clean",
     "build": "lerna run build --stream",
     "lint": "lerna run lint --parallel",
-    "test": "yarn test:evm && yarn test:proto",
+    "test": "yarn test:evm && yarn test:proto && yarn test:rwa && yarn test:utils",
     "test:evm": "cd packages/evm && yarn test",
     "test:proto": "cd packages/proto && yarn test",
+    "test:utils": "cd packages/utils && yarn test",
+    "test:rwa": "cd packages/rwa && yarn test",
     "test:ci": "yarn test:evm:ci && yarn test:proto:ci",
     "test:evm:ci": "cd packages/evm && yarn test:ci",
     "test:proto:ci": "cd packages/proto && yarn test:ci",
