--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,10 +19,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
           
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile  # yarn equivalent of 'npm ci'
         
       - name: Run ESLint
         run: yarn lint
