--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,6 +1,18 @@
 # .github/workflows/codeql-analysis.yml
 name: "CodeQL"
-on: [push, pull_request]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+permissions:
+    # required for all workflows
+    security-events: write
+
+    # required to fetch internal or private CodeQL packs
+    packages: read
+
 jobs:
   analyze:
     runs-on: ubuntu-latest
