--- a/packages/utils/simple-dapp/package.json
+++ b/packages/utils/simple-dapp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/query-core": "^5.83.1",
     "@tanstack/react-query": "^5.84.1",
+    "@wagmi/connectors": "^5.9.1",
     "@web3modal/core": "^5.1.11",
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/react": "^2.7.1",
