--- a/packages/proto/package.json
+++ b/packages/proto/package.json
@@ -4,7 +4,6 @@
   "author": "kiiglobal.io <dev@kiiglobal.io>",
   "description": "JS SDK for kiichain protofiles",
   "main": "dist/index.js",
-  "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "homepage": "https://github.com/KiiChain/kiijs-sdk",
   "license": "Apache-2.0",
@@ -25,8 +24,8 @@
     "clean": "rimraf dist/**",
     "prepare": "npm run build",
     "codegen": "ts-node scripts/codegen.ts",
-    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
-    "build:dev": "npm run clean; npm run codegen; tsc --declarationMap; tsc -p tsconfig.esm.json; npm run copy",
+    "build": "npm run clean; tsc; tsc -p tsconfig.declaration.json; npm run copy",
+    "build:dev": "npm run clean; npm run codegen; tsc --declarationMap; tsc -p tsconfig.declaration.json; npm run copy",
     "lint": "eslint . --fix",
     "test": "jest",
     "test:ci": "jest",
