--- a/packages/proto/tsconfig.json
+++ b/packages/proto/tsconfig.json
@@ -1,9 +1,14 @@
 {
   "extends": "../../tsconfig.base.json",
+  "include": ["src"],
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src/"
+    "outDir": "./dist"
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["dist", "node_modules", "**/*.spec.*", "**/*.test.*"]
+  "typedocOptions": {
+    "readme": "./README.md",
+    "name": "evm",
+    "entryPoints": ["src/index.ts"],
+    "exclude": ["node_modules"]
+  }
 }
+
