--- a/packages/rwa/package.json
+++ b/packages/rwa/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kiichain/kiijs-rwa",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": "kiiglobal.io <dev@kiiglobal.io>",
   "description": "JS SDK for kiichain rwa",
   "main": "dist/index.js",
@@ -8,6 +8,15 @@
   "types": "dist/index.d.ts",
   "homepage": "https://github.com/KiiChain/kiijs-sdk",
   "license": "Apache-2.0",
+  "overrides": {
+    "chalk": "5.3.0",
+    "strip-ansi": "7.1.0",
+    "color-convert": "2.0.1",
+    "color-name": "1.1.4",
+    "is-core-module": "2.13.1",
+    "error-ex": "1.3.2",
+    "has-ansi": "5.0.1"
+  },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org",
