--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,12 +1,21 @@
 {
 	"name": "@kiichain/kiijs-utils",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"author": "kiiglobal.io <devs@kiiglobal.io>",
 	"description": "TypeScript utility library for the Kii blockchain",
 	"main": "./dist/cjs/index.js",
 	"module": "./dist/esm/index.js",
 	"types": "./dist/types/index.d.ts",
 	"sideEffects": false,
+  "overrides": {
+    "chalk": "5.3.0",
+    "strip-ansi": "7.1.0",
+    "color-convert": "2.0.1",
+    "color-name": "1.1.4",
+    "is-core-module": "2.13.1",
+    "error-ex": "1.3.2",
+    "has-ansi": "5.0.1"
+  },
 	"scripts": {
 		"prebuild": "rimraf dist",
 		"build": "yarn build:types && yarn build:cjs && yarn build:esm && yarn build:prettier",
