--- a/package.json
+++ b/package.json
@@ -57,11 +57,14 @@
     "lerna": "^6",
     "prettier": "3.6.2",
     "rimraf": "4.4.1",
-    "strip-ansi": "^5",
+    "strip-ansi": "7.1.0",
     "symlink-workspace": "^1.1.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.1.6"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "dependencies": {
+    "yarn": "^1.22.22"
+  }
 }
