--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -8,14 +8,14 @@
 	"types": "./dist/types/index.d.ts",
 	"sideEffects": false,
 	"overrides": {
-    "chalk": "5.3.0",
-    "strip-ansi": "7.1.0",
-    "color-convert": "2.0.1",
-    "color-name": "1.1.4",
-    "is-core-module": "2.13.1",
-    "error-ex": "1.3.2",
-    "has-ansi": "5.0.1"
-  },
+		"chalk": "5.3.0",
+		"strip-ansi": "7.1.0",
+		"color-convert": "2.0.1",
+		"color-name": "1.1.4",
+		"is-core-module": "2.13.1",
+		"error-ex": "1.3.2",
+		"has-ansi": "5.0.1"
+	},
 	"scripts": {
 		"prebuild": "rimraf dist",
 		"build": "yarn build:types && yarn build:cjs && yarn build:esm && yarn build:prettier",
@@ -38,15 +38,14 @@
 	],
 	"repository": "git@github.com:KiiChain/kiijs-sdk.git",
 	"license": "Apache-2.0",
-	"private": false,
 	"publishConfig": {
 		"access": "public",
 		"registry": "https://registry.npmjs.org"
 	},
 	"peerDependencies": {
+		"dotenv": "16.4.7",
 		"ethers": "^6.0.0",
-		"viem": "2.x",
-    	"dotenv": "16.4.7"
+		"viem": "2.x"
 	},
 	"devDependencies": {
 		"@types/jest": "^29.5.14",
