--- a/.github/workflows/publish-lcd.yml
+++ b/.github/workflows/publish-lcd.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install dependencies
         run: |
           corepack enable
-          yarn set version stable
+          yarn set version berry
           YARN_ENABLE_IMMUTABLE_INSTALLS=false yarn install
 
       # Build packages
