--- a/.github/workflows/publish-rwa.yml
+++ b/.github/workflows/publish-rwa.yml
@@ -1,9 +1,9 @@
 name: Publish RWA package
 
 on:
-  workflow_dispatch: {}  # Manual trigger
+  workflow_dispatch: {} # Manual trigger
   push:
-    tags: ['v*']        # Auto-trigger on version tags
+    tags: ["v*"] # Auto-trigger on version tags
 
 jobs:
   publish:
@@ -15,13 +15,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         if: github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/v')
-      
+
       # Setup Node.js and Yarn
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
-          
+          node-version: "20"
+          registry-url: "https://registry.npmjs.org"
+
       # Configure Yarn and NPM registry
       - name: Configure registry
         run: |
@@ -29,23 +29,23 @@ jobs:
           yarn config set npmRegistryServer "https://registry.npmjs.org"
           yarn config set npmAuthToken ${{ secrets.npm_token }}
           yarn config set unsafeHttpWhitelist --json '["*.npmjs.org"]'
-          
+
       # Install Yarn and dependencies
       - name: Install dependencies
         run: |
           corepack enable
-          yarn set version stable
+          yarn set version berry
           YARN_ENABLE_IMMUTABLE_INSTALLS=false yarn install
-          
+
       # Build packages
       - name: Build packages
         run: yarn build
-        
+
       # Publish package with proper auth
       - name: Publish RWA package
         run: |
           cd packages/rwa && yarn npm publish --access public
         env:
-          NPM_CONFIG_REGISTRY: 'https://registry.npmjs.org'
+          NPM_CONFIG_REGISTRY: "https://registry.npmjs.org"
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
           YARN_NPM_AUTH_TOKEN: ${{ secrets.npm_token }}
