--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -1,57 +1,58 @@
 {
-	"name": "@kiichain/kiijs-evm",
-	"version": "0.4.1",
-	"author": "kiiglobal.io <devs@kiiglobal.io>",
-	"description": "TypeScript library for EVM interactions on the Kii blockchain",
-	"main": "./dist/cjs/index.js",
-	"module": "./dist/esm/index.js",
-	"types": "./dist/types/index.d.ts",
-	"sideEffects": false,
-	"overrides": {
-		"chalk": "5.3.0",
-		"strip-ansi": "7.1.0",
-		"color-convert": "2.0.1",
-		"color-name": "1.1.4",
-		"is-core-module": "2.13.1",
-		"error-ex": "1.3.2",
-		"has-ansi": "5.0.1"
-	},
-	"scripts": {
-		"prebuild": "rimraf dist",
-		"build": "yarn build:types && yarn build:cjs && yarn build:esm && yarn build:prettier",
-		"build:cjs": "tsc --outDir dist/cjs --module commonjs",
-		"build:esm": "tsc --outDir dist/esm --module esnext",
-		"build:types": "tsc --project ./tsconfig.declaration.json",
-		"build:prettier": "prettier --write 'dist/**/*.js'",
-		"docs": "typedoc --out docs",
-		"test": "jest",
-		"test:ci": "jest",
-		"lint": "eslint --ext .ts"
-	},
-	"homepage": "https://github.com/KiiChain/kiijs-sdk#readme",
-	"keywords": [
-		"kii",
-		"javascript",
-		"typescript",
-		"node",
-		"evm"
-	],
-	"repository": "git@github.com:KiiChain/kiijs-sdk.git",
-	"license": "Apache-2.0",
-	"publishConfig": {
-		"access": "public",
-		"registry": "https://registry.npmjs.org"
-	},
-	"peerDependencies": {
-		"dotenv": "16.4.7",
-		"ethers": "^6.0.0",
-		"viem": "2.x"
-	},
-	"devDependencies": {
-		"@types/jest": "^29.5.14",
-		"ethers": "^6.0.0",
-		"jest": "^29.7.0",
-		"ts-jest": "^29.3.1",
-		"viem": "2.x"
-	}
+  "name": "@kiichain/kiijs-evm",
+  "version": "0.4.1",
+  "type": "module",
+  "author": "kiiglobal.io <devs@kiiglobal.io>",
+  "description": "TypeScript library for EVM interactions on the Kii blockchain",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/types/index.d.ts",
+  "sideEffects": false,
+  "overrides": {
+    "chalk": "5.3.0",
+    "strip-ansi": "7.1.0",
+    "color-convert": "2.0.1",
+    "color-name": "1.1.4",
+    "is-core-module": "2.13.1",
+    "error-ex": "1.3.2",
+    "has-ansi": "5.0.1"
+  },
+  "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "yarn build:types && yarn build:cjs && yarn build:esm && yarn build:prettier",
+    "build:cjs": "tsc --outDir dist/cjs --module commonjs",
+    "build:esm": "tsc --outDir dist/esm --module esnext",
+    "build:types": "tsc --project ./tsconfig.declaration.json",
+    "build:prettier": "prettier --write 'dist/**/*.js'",
+    "docs": "typedoc --out docs",
+    "test": "jest",
+    "test:ci": "jest",
+    "lint": "eslint --ext .ts"
+  },
+  "homepage": "https://github.com/KiiChain/kiijs-sdk#readme",
+  "keywords": [
+    "kii",
+    "javascript",
+    "typescript",
+    "node",
+    "evm"
+  ],
+  "repository": "git@github.com:KiiChain/kiijs-sdk.git",
+  "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
+  "peerDependencies": {
+    "dotenv": "16.4.7",
+    "ethers": "^6.0.0",
+    "viem": "2.x"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "ethers": "^6.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.1",
+    "viem": "2.x"
+  }
 }
