--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kiichain/kiijs-evm",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "type": "module",
   "author": "kiiglobal.io <devs@kiiglobal.io>",
   "description": "TypeScript library for EVM interactions on the Kii blockchain",
@@ -54,5 +54,8 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.3.1",
     "viem": "2.x"
+  },
+  "dependencies": {
+    "@kiichain/kiijs-utils": "workspace:^"
   }
 }
