--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
   ],
   "scripts": {
     "clean": "lerna run clean",
-    "build": "lerna run build --stream",
+    "build": "lerna run build --stream --sort",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "pretty": "yarn prettier --write '**/*.{ts,tsx}' --ignore-path .prettierignore",
-    "test": "yarn test:evm && yarn test:proto && yarn test:rwa && yarn test:utils",
+    "test": "lerna run test --stream --sort",
     "test:evm": "cd packages/evm && yarn test",
     "test:proto": "cd packages/proto && yarn test",
     "test:utils": "cd packages/utils && yarn test",
     "test:rwa": "cd packages/rwa && yarn test",
-    "test:ci": "yarn test:evm:ci && yarn test:proto:ci",
+    "test:ci": "lerna run test:ci --stream --sort",
     "test:evm:ci": "cd packages/evm && yarn test:ci",
     "test:proto:ci": "cd packages/proto && yarn test:ci",
     "codegen": "lerna run codegen --stream --scope kiijs-sdk",
