--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -18,16 +18,16 @@
     "has-ansi": "5.0.1"
   },
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "npx rimraf dist",
     "build": "yarn build:types && yarn build:cjs && yarn build:esm && yarn build:prettier",
-    "build:cjs": "tsc --outDir dist/cjs --module commonjs",
-    "build:esm": "tsc --outDir dist/esm --module esnext",
-    "build:types": "tsc --project ./tsconfig.declaration.json",
-    "build:prettier": "prettier --write dist/**/*.js",
-    "docs": "typedoc --out docs",
-    "test": "jest",
-    "test:ci": "jest",
-    "lint": "eslint --ext .ts"
+    "build:cjs": "npx tsc --outDir dist/cjs --module commonjs",
+    "build:esm": "npx tsc --outDir dist/esm --module esnext",
+    "build:types": "npx tsc --project ./tsconfig.declaration.json",
+    "build:prettier": "npx prettier --write dist/**/*.js",
+    "docs": "npx typedoc --out docs",
+    "test": "npx jest",
+    "test:ci": "npx jest",
+    "lint": "npx eslint --ext .ts"
   },
   "homepage": "https://github.com/KiiChain/kiijs-sdk#readme",
   "keywords": [
