fix(lerna): enable useWorkspaces for improved package management

--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,7 @@
   "conventionalCommits": true,
   "npmClient": "yarn",
   "npmClientArgs": ["--no-lockfile"],
+  "useWorkspaces": true,
   "packages": ["packages/*"],
   "version": "independent",
   "registry": "https://registry.npmjs.org",
