chore: add packageManager entry for Yarn 4.10.3 in package.json files

--- a/packages/lcd/package.json
+++ b/packages/lcd/package.json
@@ -42,5 +42,6 @@
     "swagger-typescript-api": "^13.2.13",
     "tsx": "^4.20.6"
   },
-  "keywords": []
+  "keywords": [],
+  "packageManager": "yarn@4.10.3"
 }
