--- a/packages/proto/package.json
+++ b/packages/proto/package.json
@@ -57,5 +57,6 @@
     "@cosmjs/stargate": "^0.33.1",
     "@cosmology/lcd": "^0.14.0"
   },
-  "keywords": []
+  "keywords": [],
+  "packageManager": "yarn@4.10.3"
 }
