--- a/packages/rwa/package.json
+++ b/packages/rwa/package.json
@@ -57,5 +57,6 @@
     "@cosmjs/tendermint-rpc": "^0.34.0",
     "bip39": "^3.1.0",
     "cosmjs-types": "^0.9.0"
-  }
+  },
+  "packageManager": "yarn@4.10.3"
 }
