fix: remove YARN_ENABLE_IMMUTABLE_INSTALLS flag from Yarn install commands in workflow files

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,10 +13,7 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": false,
 
-    "baseUrl": "./",
-    "paths": {
-      "@kiichain/kiijs-evm/*": ["packages/evm/dist/esm/*", "packages/evm/dist/cjs/*"],
-    }
+    "baseUrl": "./"
   },
   "exclude": [
     "node_modules",
