--- a/.github/workflows/publish-rwa.yml
+++ b/.github/workflows/publish-rwa.yml
@@ -35,7 +35,7 @@ jobs:
       # Install Yarn and dependencies
       - name: Install dependencies
         run: |
-          YARN_ENABLE_IMMUTABLE_INSTALLS=false yarn install
+          yarn install
 
       # Build packages
       - name: Build packages
