--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,16 +4,9 @@
   "type": "module",
   "author": "kiiglobal.io <devs@kiiglobal.io>",
   "description": "TypeScript utility library for the Kii blockchain",
-  "types": "./dist/esm/index.d.ts",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
-  "exports": {
-    ".": {
-      "types": "./dist/esm/index.d.ts",
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js"
-    }
-  },
+  "types": "./dist/types/index.d.ts",
   "sideEffects": false,
   "overrides": {
     "chalk": "5.3.0",
@@ -26,9 +19,9 @@
   },
   "scripts": {
     "prebuild": "npx rimraf dist",
-    "build": "yarn build:cjs && yarn build:esm && yarn build:prettier",
-    "build:cjs": "npx tsc --outDir dist/cjs --module commonjs --declaration --declarationMap",
-    "build:esm": "npx tsc --outDir dist/esm --module esnext --declaration --declarationMap",
+    "build": "yarn build:types && yarn build:cjs && yarn build:esm && yarn build:prettier",
+    "build:cjs": "npx tsc --outDir dist/cjs --module commonjs",
+    "build:esm": "npx tsc --outDir dist/esm --module esnext",
     "build:types": "npx tsc --project ./tsconfig.declaration.json",
     "build:prettier": "npx prettier --write dist/**/*.js",
     "docs": "npx typedoc --out docs",
