--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -27,7 +27,8 @@
     "docs": "npx typedoc --out docs",
     "test": "npx jest",
     "test:ci": "npx jest",
-    "lint": "npx eslint --ext .ts"
+    "lint": "npx eslint --ext .ts",
+    "generate": "wagmi generate"
   },
   "homepage": "https://github.com/KiiChain/kiijs-sdk#readme",
   "keywords": [
@@ -50,10 +51,14 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@wagmi/cli": "^2.7.0",
     "ethers": "^6.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.1",
     "viem": "2.x"
   },
-  "packageManager": "yarn@4.10.3"
+  "packageManager": "yarn@4.10.3",
+  "dependencies": {
+    "wagmi": "^2.18.2"
+  }
 }
