refactor: streamline build scripts for consistency across packages

--- a/packages/proto/package.json
+++ b/packages/proto/package.json
@@ -35,8 +35,8 @@
     "clean": "npx rimraf dist",
     "prepare": "npm run build",
     "codegen": "npx ts-node scripts/codegen.ts",
-    "build": "npm run clean; npx tsc; npx tsc -p tsconfig.declaration.json; npm run copy",
-    "build:dev": "npm run clean; npm run codegen; npx tsc --declarationMap; npx tsc -p tsconfig.declaration.json; npm run copy",
+    "build": "npm run clean && npx tsc && npx tsc -p tsconfig.declaration.json && npm run copy",
+    "build:dev": "npm run clean && npm run codegen && npx tsc --declarationMap && npx tsc -p tsconfig.declaration.json && npm run copy",
     "lint": "npx eslint . --fix",
     "test": "npx jest",
     "test:ci": "npx jest",
