--- a/packages/rwa/package.json
+++ b/packages/rwa/package.json
@@ -32,11 +32,11 @@
   },
   "scripts": {
     "copy": "npx copyfiles -f ../../LICENSE README.md package.json dist",
-    "clean": "npx rimraf dist/**",
+    "clean": "npx rimraf dist",
     "prepare": "npm run build",
     "codegen": "npx ts-node scripts/codegen.ts",
-    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
-    "build:dev": "npm run clean; npm run codegen; tsc --declarationMap; tsc -p tsconfig.esm.json; npm run copy",
+    "build": "npm run clean && tsc && npm run copy",
+    "build:dev": "npm run clean && npm run codegen && tsc --declarationMap && npm run copy",
     "lint": "npx eslint . --fix",
     "test": "npx jest",
     "test:ci": "npx jest",
