--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -47,7 +47,8 @@
   "peerDependencies": {
     "dotenv": "16.4.7",
     "ethers": "^6.0.0",
-    "viem": "2.x"
+    "viem": "2.x",
+    "wagmi": "^2.18.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
@@ -57,8 +58,5 @@
     "ts-jest": "^29.3.1",
     "viem": "2.x"
   },
-  "packageManager": "yarn@4.10.3",
-  "dependencies": {
-    "wagmi": "^2.18.2"
-  }
+  "packageManager": "yarn@4.10.3"
 }
