--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -56,7 +56,8 @@
     "ethers": "^6.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.1",
-    "viem": "2.x"
+    "viem": "2.x",
+    "wagmi": "^2.18.2"
   },
   "packageManager": "yarn@4.10.3"
 }
